data/derived/sp14/progs/unify/prog4230.ml.out
Characters 98-106:
  driver n*10 [];;
  ^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
